assets/main.scss
@import 'variables';

/* Reset */

* {
  margin: 0px;
  padding: 0px;
  box-sizing:border-box;
  -webkit-tap-highlight-color: transparent;
  transition: color, background-color 0.28s;
}

html, 
body {
  margin: 0;
  padding: 0;
  font-family: $font-family-main, sans-serif;
}

/* Fix for overflow bug */
#__nuxt {
  overflow-x: hidden;
}


/* Typography */

a {
  color:$blue;
  text-decoration: underline;
  font-weight: bold;
}

    .dark a {
      color:$blue-light;
    }

h1 { 
  font-size: $font-size-mega;
  line-height: $font-size-mega; 
  font-family: $font-family-main, sans-serif;
  font-weight:700;
  margin-top: 0;
  margin-bottom: 2rem;
  padding:0.5rem 0;

  @media screen and (max-width: 1200px) {
    font-size: $font-size-max;
    line-height: $font-size-max;
  }

  @media screen and (max-width: 768px) {
    font-size: $font-size-max;
    line-height: $font-size-max;
  }

}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.dark h1 {
  color: $white;
}

h2 { 
  font-size: $font-size-xxl;
  line-height: $font-size-xxl; 
  font-family: $font-family-main;
  margin-bottom:1rem;
  font-weight:700;

  @media screen and (max-width: 1000px) {
    font-size: $font-size-xl;
    line-height: $font-size-xl;
  }

}

.content h2 {
  margin-top: $spacing-lg;
}

h3 { 
  font-size: $font-size-lg; 
  line-height: $font-size-lg * $multiplier; 
  font-family: $font-family-main;
  margin-bottom:1rem;
  font-weight:800;

  @media screen and (max-width: 1000px) {
    font-size: $font-size-lg;
    line-height: $font-size-lg * $multiplier;
  }
}

.content h3 {
  margin-top: $spacing-lg;
}

h4 { 
  font-size: $font-size-md; 
  line-height: $font-size-md * $multiplier; 
  font-family: $font-family-main;
  margin: $spacing-md 0 $spacing-sm;
  font-weight:700;

  .highlight {
    color: $red-dark;
  }

  @media screen and (max-width: 1000px) {
    font-size: $font-size-md;
    line-height: $font-size-md * $multiplier;
  }
}

.article-extras .section-title h4 {
  margin-top: 0;
  font-size: $font-size-md;
  opacity: 0.5;
}

h5 { 
  font-size: $font-size-md; 
  line-height: $font-size-md * $multiplier; 
  font-family: $font-family-main;
  margin-top: $spacing-md;
  margin-bottom: $spacing-sm;
  font-weight:500;
  line-height: $spacing-md;

  @media screen and (max-width: 1000px) {
    font-size: $font-size-xs;
    line-height: $font-size-sm * $multiplier;
  }
}

p.super-text {
  font-family: $font-family-main, sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: $font-size-md;
  line-height: 100%;
  text-align: center;
  color: rgba($black, 0.3);

  @media screen and (max-width: 1000px) {
    font-size: $font-size-xs;
  }
}

.dark p.super-text {
  color: rgba($white, 0.3);
}

p { 
  font-size: $font-size-md; 
  line-height: $font-size-md * $multiplier; 
  font-family: $font-family-secondary, sans-serif;
  line-height: $spacing-md;
  margin-bottom: 1rem;

  @media screen and (max-width: 1000px) {
    font-size: $font-size-sm;
    line-height: $font-size-sm * $multiplier * 1.4;
  }

}

li { 
  font-size: $font-size-md; 
  line-height: $font-size-md * $multiplier; 
  font-family: $font-family-secondary, sans-serif;
  line-height: $spacing-md;

  @media screen and (max-width: 1000px) {
    font-size: $font-size-sm;
    line-height: $font-size-sm * $multiplier * 1.4;
  }

}

.code {
  padding: 0.5rem;
  border-radius: $br-lg;
  margin: $spacing-md 0;
  overflow-x: auto;
  background: $black url('/textures/texture-3-bg-dark.png') no-repeat center center;
  position: relative;

  .type {
    background-color: $black-dark;
    border-radius: $br-md;
    position: absolute;
    right: $spacing-sm;
    top: $spacing-sm;
    padding: $spacing-xs;
    color: $white;
    z-index: 1;
  }

  code {
    font-family: 'Fira Code', monospace;
    font-size: $font-size-xs;
    line-height: $font-size-sm * $multiplier;
    color: $white;
  }
}

    .dark .code {
      background-color: #333;
    }

small { 
  font-size: $font-size-sm;
  line-height: $font-size-sm * $multiplier; 
  font-family: 'Open Sans', sans-serif;

  @media screen and (max-width: 1000px) {
    font-size: $font-size-xs;
    line-height: $font-size-xs * $multiplier;
  }
}

ul,
ol {
  margin: 0 $spacing-sm $spacing-md $spacing-md;
}

hr {
  margin: 8rem auto 4rem;
  width:20%;
  opacity: 0.2;
  border:1px solid #000000;
}

    .dark hr {
      border:1px solid #ffffff;
    }

p > strong {
  font-weight: 700;  
}

.center {
  text-align: center;
}

/* Layout helpers */

.w-full {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin: 0 auto;
  padding: 0 $spacing-md;

  @media screen and (max-width: 1000px) {
    width: 100%;
    padding: 0 $spacing-xs;
  }
}

.w-two-thirds {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 66.666%;
  margin: 0 auto;
  padding: 0 $spacing-md;

  @media screen and (max-width: 1000px) {
    width: 100%;
    padding: 0 $spacing-xs;
  }
}

.w-half {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 50%;
  margin: 0 auto;
  padding: 0 $spacing-md;

  @media screen and (max-width: 1000px) {
    width: 100%;
    padding: 0 $spacing-xs;
  }
}

.w-third {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 33.333%;
  margin: 0 auto;
  padding: 0 $spacing-md;

  @media screen and (max-width: 1000px) {
    width: 100%;
    padding: 0 $spacing-xs;
  }
}

.w-quarter {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 25%;
  margin: 0 auto;
  padding: 0 $spacing-md;

  @media screen and (max-width: 1000px) {
    width: 100%;
    padding: 0 $spacing-xs;
  }
}
/* ... */

